--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,12 +4,13 @@
         <meta charset="utf-8" />
 
         <link rel="icon" href="./LOGO.png" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
         <meta
-            name="description"
-            content="Web site created using create-react-app"
+            name="viewport"
+            content="width=device-width,initial-scale=1,maximum-scale=5"
         />
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+        <meta name="theme-color" content="#000000" />
+        <meta name="B-SHOP" content="First Gaming Shop In Tunisia" />
 
         <!--
       manifest.json provides metadata used when your web app is installed on a
